# haskellDB

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  basicWebDev.cabal  compose.yml
_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MongoFFI.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mongoffi.vcxproj  mongoffi.vcxproj.filters
_build/mongoffi.dir/Debug/: mongoffi.dll.recipe  mongoffi.ilk
_build/mongoffi.dir/Debug/mongoffi.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  mongoffi.lastbuildstate
_build/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
_build/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
_build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
_build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: basicWebDev-0.1.0.0-inplace.conf  package.cache
servant-server-0.20/: servant-server.cabal
src/: MongoFFI.hs  MyLib.hs  mongo.c  mongo.h
